# MiniDevTools

./: .gitignore  MANIFEST.in  README.md  cli.py  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  usage.rst
minidevtools/: __init__.py  cli.py  hashTool.py  hash_tool.py
minidevtools/utils/: __init__.py  banner.py  checkUpdate.py  check_update.py  config.py
src/: __init__.py
src/cli/: __init__.py
src/cli/utils/: banner.py
