[tool.poetry]
name = "minidevtools"
version = "0.0.1"
description = "A Swiss Army knife for developers"
authors = ["odest <destrochloridium@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"
packaging = "^24.0"
requests = "^2.31.0"
typing_extensions = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
